--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ src/docs/images/ppt
 # src/docs/test.adoc
 src/test/docs/excel/
 ~$*
+
+manual-tests/.gradle
+manual-tests/build
+manual-tests/builder
+manual-tests/generate-docs.sh
