--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ src/test/docs/excel/
 
 resources/reveal.js 
 resources/asciidoctor-reveal.js
+
+# Manual test
+manual-tests/.gradle
+manual-tests/build
+manual-tests/builder
+manual-tests/generate-docs.sh
