--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ src/test/docs/structurizr/
 
 resources/reveal.js
 resources/asciidoctor-reveal.js
+
+# Manual test
+manual-tests/.gradle
+manual-tests/build
+manual-tests/builder
+manual-tests/generate-docs.sh
