--- a/scripts/readScmInfo.gradle
+++ b/scripts/readScmInfo.gradle
@@ -15,7 +15,7 @@ logger.info "readScmInfo> mainConfigFile: ${mainConfigFile}"
 // default config
 def defaultConfig = [
     enable: false,
-    scmrefCmd: "[ ! -z \"${CI_COMMIT_BRANCH}${CI_COMMIT_TAG}\" ] && echo \"${CI_COMMIT_BRANCH}${CI_COMMIT_TAG}\" || git symbolic-ref --short -q HEAD || git describe --tags --exact-match 2> /dev/null || git rev-parse --short HEAD",
+    scmrefCmd: "[ ! -z \"${System.env.CI_COMMIT_BRANCH}${System.env.CI_COMMIT_TAG}\" ] && echo \"${CI_COMMIT_BRANCH}${CI_COMMIT_TAG}\" || git symbolic-ref --short -q HEAD || git describe --tags --exact-match 2> /dev/null || git rev-parse --short HEAD",
     scmdateCmd: "git log -1 --format='%at' | xargs -I{} date -d @{} '+%Y-%m-%d %H:%M:%S'",
     scmcommitCmd: "git rev-parse --short HEAD",
     scmurlCmd: "git config --get remote.origin.url",
