--- a/scripts/readScmInfo.gradle
+++ b/scripts/readScmInfo.gradle
@@ -12,10 +12,13 @@ buildscript {
 logger.info "readScmInfo> docDir: ${docDir}"
 logger.info "readScmInfo> mainConfigFile: ${mainConfigFile}"
 
+// We take first, the git ref name provided by popular CI engine: gitlab, github, jenkins, circleci, travis...
+def ciBranchName="\${CI_COMMIT_BRANCH}\${CI_COMMIT_TAG}\${GIT_BRANCH}\${GITHUB_REF_NAME}\${CIRCLE_TAG}\${CIRCLE_BRANCH}\${TRAVIS_BRANCH}"
+
 // default config
 def defaultConfig = [
     enable: false,
-    scmrefCmd: "[ ! -z \"${System.env.CI_COMMIT_BRANCH}${System.env.CI_COMMIT_TAG}\" ] && echo \"${System.env.CI_COMMIT_BRANCH}${System.env.CI_COMMIT_TAG}\" || git symbolic-ref --short -q HEAD || git describe --tags --exact-match 2> /dev/null || git rev-parse --short HEAD",
+    scmrefCmd: "[ ! -z \"${ciBranchName}\" ] && echo \"${ciBranchName}\" || git symbolic-ref --short -q HEAD || git describe --tags --exact-match 2> /dev/null || git rev-parse --short HEAD",
     scmdateCmd: "git log -1 --format='%at' | xargs -I{} date -d @{} '+%Y-%m-%d %H:%M:%S'",
     scmcommitCmd: "git rev-parse --short HEAD",
     scmurlCmd: "git config --get remote.origin.url",
