feat; Add docker images package on tag

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,8 @@ on:
   create:
     tags:
       - v*-shadoc*
+  workflow_dispatch:
+    branches: [ ng-shadoc , v*-shadoc* ]
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
